# Blog

./: .gitignore  README.md  db.sqlite3  execute.bat  pyproject.toml  removendo.sqlite3
blog/: admin.py  forms.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_assunto.py  0003_registrar.py  0004_delete_registrar_assunto_data_de_envio.py  0005_assunto_usuario.py
blog/static/blog/: index.css  style.css  styleLogin.css
blog/templates/: index.html  indexWithLogin.html  login.html  register.html
config/: settings.py  urls.py
